Fix package e nomi variabili