@@ -21,15 +21,16 @@ import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.airmalta.hip.tdbingester.filepojos.DoneFileEntry;
-import com.airmalta.hip.tdbingester.filepojos.DoneFile;
+import com.kmmaltairlines.hip.tdbingester.filepojos.DoneFile;
+import com.kmmaltairlines.hip.tdbingester.filepojos.DoneFileEntry;
+
 @Component
 public class Utility {
 
 	public static ArrayList<String> readFile(File file) {
 		String destinationPath = "C:\\tdb\\prova\\";
 		ArrayList<String> list = new ArrayList<String>();
-		File newPath = new File(destinationPath +file.getName());
+		File newPath = new File(destinationPath + file.getName());
 		try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
 			String line;
 			while ((line = reader.readLine()) != null) {
@@ -43,6 +44,7 @@ public class Utility {
 		return null;
 
 	}
+
 	public static void moveFile(File originalPath, String destinationPath) throws IOException {
 		File destination = new File(destinationPath + originalPath.getName());
 		Files.move(originalPath.toPath(), destination.toPath(), StandardCopyOption.REPLACE_EXISTING);
@@ -54,14 +56,13 @@ public class Utility {
 	}
 
 	public static ArrayList<DoneFileEntry> createDoneFileEntry(ArrayList<String> arrayString) {
-
 		ArrayList<DoneFileEntry> doneFileEntryList = new ArrayList();
 		for (String element : arrayString) {
 			if (element.contains("=")) {
 				String[] prova = element.split("=");
 
 				DoneFileEntry donefileentry = new DoneFileEntry(prova[0], Integer.parseInt(prova[1]));
-				doneFileEntryList.addLast(donefileentry);
+				doneFileEntryList.add(donefileentry);
 			}
 
 		}
@@ -69,17 +70,17 @@ public class Utility {
 		return doneFileEntryList;
 	}
 
-	public static DoneFile createDoneFile(String fileName, ArrayList<String> readedFile, ArrayList<DoneFileEntry> doneFileEntryList) {
+	public static DoneFile createDoneFile(String fileName, ArrayList<String> readedFile,
+			ArrayList<DoneFileEntry> doneFileEntryList) {
 		DoneFile doneFile = new DoneFile();
 		doneFile.setFileName(fileName);
-		doneFile.setNumberOfBytes(Integer.parseInt(readedFile.getFirst()));
-		System.out.println(Integer.parseInt(readedFile.getFirst()));
-		System.out.println(fileName);
+		doneFile.setNumberOfBytes(Integer.parseInt(readedFile.get(0)));
 		doneFile.setFileEntries(doneFileEntryList);
 		return doneFile;
 	}
 
-	public static boolean compareFileEntries(ArrayList<DoneFileEntry> dotFiles, HashMap<String, String> doneFileEntries, DoneFile doneFile) throws Exception {
+	public static boolean compareFileEntries(ArrayList<DoneFileEntry> dotFiles, HashMap<String, String> doneFileEntries,
+			DoneFile doneFile) throws Exception {
 		int count = 0;
 		int sizeDoneFileEntry = doneFileEntries.size();
 		ArrayList<String> missingEntry = new ArrayList<>();
@@ -90,47 +91,48 @@ public class Utility {
 				if (baseFilename.equals(element.getFilename())) {
 					count++;
 					missingEntry.remove(element.getFilename());
-				}	
-					}
+				}
 			}
+		}
 		if (count == sizeDoneFileEntry) {
 			return true;
-			
+
 		} else {
-			throw new IOException("ERROR - The following files specified in " + doneFile.getFileName() + " have not been found: " + missingEntry);
-			
+			throw new IOException("ERROR - The following files specified in " + doneFile.getFileName()
+					+ " have not been found: " + missingEntry);
 
 		}
-		
+
 	}
-	
+
 	public static Timestamp nowUtcTimestamp() {
-	    return Timestamp.from(Instant.now()); // Usa Instant per ottenere il tempo in UTC
+		return Timestamp.from(Instant.now()); // Usa Instant per ottenere il tempo in UTC
 	}
-	
+
 	public static String[][] processInputString(String inputString) {
-	    // Separare le righe sulla base dei caratteri di nuova linea (\n)
-	    String[] rows = inputString.split("\n");
-	    String[][] result = new String[rows.length][];
+		// Separare le righe sulla base dei caratteri di nuova linea (\n)
+		String[] rows = inputString.split("\n");
+		String[][] result = new String[rows.length][];
 
-	    // Separazione delle righe in colonne, mantenendo anche le celle vuote
-	    for (int i = 0; i < rows.length; i++) {
-	        result[i] = rows[i].split("\\|", -1);  // Il flag -1 mantiene anche i vuoti
-	    }
+		// Separazione delle righe in colonne, mantenendo anche le celle vuote
+		for (int i = 0; i < rows.length; i++) {
+			result[i] = rows[i].split("\\|", -1); // Il flag -1 mantiene anche i vuoti
+		}
 
-	    return result;
+		return result;
 	}
-	
-	public int getRecordsByFilename(String filename,ArrayList<DoneFileEntry> dotFiles) {
-	    for (DoneFileEntry entry : dotFiles) {
-	        if (entry.getFilename().equals(filename)) {
-	            return entry.getRecords();
-	        }
-	    }
-	    // Se non trovato, puoi restituire un valore predefinito o lanciare un'eccezione
-	    return -1;  // o puoi lanciare un'eccezione come new NoSuchElementException("File not found")
+
+	public int getRecordsByFilename(String filename, ArrayList<DoneFileEntry> dotFiles) {
+		for (DoneFileEntry entry : dotFiles) {
+			if (entry.getFilename().equals(filename)) {
+				return entry.getRecords();
+			}
+		}
+		// Se non trovato, puoi restituire un valore predefinito o lanciare un'eccezione
+		return -1; // o puoi lanciare un'eccezione come new NoSuchElementException("File not
+					// found")
 	}
-	
+
 	public Utility() {
 	}
 }
